fixed the wordwrap bug

--- a/src/components/MessageCard.css
+++ b/src/components/MessageCard.css
@@ -2,13 +2,7 @@
   width: -moz-fit-content;
   width: fit-content;
   max-width: 50%;
-  white-space: -moz-pre-wrap !important;
-  white-space: -pre-wrap;
-  white-space: -o-pre-wrap;
-  white-space: pre-wrap;
   word-wrap: break-word;
-  word-break: break-all;
-  white-space: normal;
   background-color: rgb(201, 201, 201);
   padding: 10px;
   margin: 0;
@@ -21,13 +15,7 @@
   width: -moz-fit-content;
   width: fit-content;
   max-width: 50%;
-  white-space: -moz-pre-wrap !important;
-  white-space: -pre-wrap;
-  white-space: -o-pre-wrap;
-  white-space: pre-wrap;
   word-wrap: break-word;
-  word-break: break-all;
-  white-space: normal;
   background-color: #8ca0ff;
   padding: 10px;
   margin: 0;
